# zero_sonic

./: LICENSE  README.md  dual_arm_roadmap.md  mobile_manipulator_ros2_architecture.md  so100_arm_control_plan.md
install/: local_setup.sh  setup.sh
install/py_hello_world/lib/py_hello_world/: listener  talker
install/py_hello_world/share/py_hello_world/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/arm_control/: CMakeLists.txt  arm_random_motion.py  package.xml  robot_eyes.py
src/arm_control/config/: controller_config.yaml  left_arm_config.yaml  right_arm_config.yaml
src/arm_control/include/arm_control/: servo_utils.hpp  waveshare_hardware_interface.hpp
src/arm_control/launch/: arm_controllers.launch.py  single_arm.launch.py
src/arm_control/urdf/: so100_arm.urdf.xacro
src/py_hello_world/: package.xml  setup.cfg  setup.py
src/py_hello_world/py_hello_world/: talker.py
